Implement frontend stuff

--- a/frontend-angular-workspace/projects/end-user/src/app/components/footer/footer.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/footer/footer.component.html
@@ -1,3 +1,98 @@
-<p>
-  Footer works
-</p>
+<div
+  class="
+    flex
+    items-center
+    bg-black
+    text-white
+    h-20
+  "
+>
+  <!--Padding block-->
+  <div
+    class="
+      flex-initial
+      ml-12
+    "
+  ></div>
+
+  <!--Social media buttons-->
+  <div
+    class="
+      flex-initial
+      flex
+    "
+  >
+    <div
+      style="background-image: url('assets/youtube.svg');"
+      class="
+        ml-4
+        flex-initial
+        w-8
+        h-8
+        bg-center
+        bg-cover
+      "
+    >
+    </div>
+    <div
+      style="background-image: url('assets/facebook.svg');"
+      class="
+        ml-4
+        flex-initial
+        w-8
+        h-8
+        bg-center
+        bg-cover
+      "
+    >
+    </div>
+  </div>
+  <!--Spacer-->
+  <div
+    class="flex-auto"
+  ></div>
+  <!--Contact Information-->
+  <div
+    class="
+      flex-initial
+      flex
+    "
+  >
+    <div
+      class="
+        flex
+        flex-initial
+        ml-1
+        mr-1
+      "
+    >
+      <div
+        class="text-2xl"
+      >
+        Shop
+      </div>
+    </div>
+    <div
+      class="
+        flex
+        flex-initial
+        ml-1
+        mr-1
+      "
+    >
+      <div
+        class="text-2xl"
+      >
+        Warehouse
+      </div>
+    </div>
+  </div>
+
+  <!--Padding block-->
+  <div
+    class="
+      flex-initial
+      mr-12
+    "
+  ></div>
+</div>
