--- a/frontend-angular-workspace/projects/end-user/src/app/components/body-for-rent/body-for-rent.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/body-for-rent/body-for-rent.component.html
@@ -1,1 +1,66 @@
-<p>for-rent-content works!</p>
+<div
+  class="
+    flex
+    flex-col
+    h-full
+  "
+>
+  <!--Cover Image-->
+  <div
+    style="
+      height: calc(100vh - 12rem);
+      background-image: url('https://www.itl.cat/pngfile/big/214-2141088_desktop-bike-stunt-images-wallpaper-motorcycle-vs-car.jpg');
+    "
+    class="
+      bg-center
+      bg-cover
+      animate-fadein
+    "
+  >
+  </div>
+
+  <!--Content-->
+  <div
+    class="
+      pl-24
+      pr-24
+      whitespace-pre-line
+    "
+  >
+    <div
+      class="
+        pt-4
+        pb-2
+        border-b-2
+      "
+    >
+      <app-breadcrumb></app-breadcrumb>
+    </div>
+
+    <div
+      class="
+        mt-2
+        mb-4
+        flex
+      "
+    >
+      <div
+        class="
+          ml-4
+          w-1/6
+        "
+      >
+        <app-tag-select></app-tag-select>
+      </div>
+      <div
+        class="
+          ml-4
+          mr-4
+        "
+      >
+        Something here
+      </div>
+    </div>
+  </div>
+
+</div>
