--- a/frontend-angular-workspace/projects/end-user/src/app/layouts/default-layout/default-layout.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/layouts/default-layout/default-layout.component.html
@@ -1,12 +1,10 @@
 <div
-  style="
-    height: 100vh;
-  "
   class="
     flex
     flex-col
     font-sans
     text-base
+    h-screen
     antialiased
   "
 >
