--- a/frontend-angular-workspace/projects/administration/src/styles.scss
+++ b/frontend-angular-workspace/projects/administration/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./css/tailwind-base.scss";
+@import "./css/tailwind-components.scss";
+@import "./css/tailwind-screens.scss";
+@import "./css/tailwind-utilities.scss";
