--- a/frontend-angular-workspace/projects/end-user/src/app/components/body-about-us/body-about-us.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/body-about-us/body-about-us.component.html
@@ -2,6 +2,8 @@
   coverImageReference="https://miro.medium.com/max/4032/1*Yz1EWGb79fF-m9PzNAej7Q.jpeg"
 >
 
+  {{testValue}}
+
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean scelerisque odio at sagittis aliquam. Mauris nibh
   sem, placerat quis turpis sed, bibendum hendrerit quam. Praesent tristique, erat ac luctus posuere, sem tellus
   tempor ante, sed rhoncus ex eros sed massa. Cras at porta mi. Integer nunc tortor, consequat sed tristique non,
