--- a/frontend-angular-workspace/projects/end-user/src/app/components/footer/footer.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/footer/footer.component.html
@@ -94,7 +94,7 @@
         >
         </div>
         <div>
-          Email: 2wheelsvietnam@gmail.com
+          Email: {{commonPageData.footerData.email}}
         </div>
       </div>
       <div
@@ -119,7 +119,7 @@
         >
         </div>
         <div>
-          Hotline: (+84) 904 253 491
+          Hotline: {{commonPageData.footerData.phoneNumber}}
         </div>
       </div>
 
@@ -173,7 +173,7 @@
         >
         </div>
         <div>
-          Shop: 13 Ngo Huyen, Hang Trong, Hanoi
+          Shop: {{commonPageData.footerData.shopAddress}}
         </div>
       </div>
       <div
@@ -198,7 +198,7 @@
         >
         </div>
         <div>
-          Warehouse: 99 Bac Cau, Long Bien, Hanoi
+          Warehouse: {{commonPageData.footerData.warehouseAddress}}
         </div>
       </div>
     </div>
