--- a/frontend-angular-workspace/projects/end-user/src/styles.scss
+++ b/frontend-angular-workspace/projects/end-user/src/styles.scss
@@ -1,8 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
 @tailwind base;
 @tailwind components;
 @tailwind screens;
 @tailwind utilities;
+//@import "~tailwindcss"
+
+$primary: #81899b;
 
 html {
   scrollbar-width: none;
