--- a/AmberSystem/EndUserView/Pages/Shared/_Layout.cshtml
+++ b/AmberSystem/EndUserView/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using DataAccessingService.MetadataProvidingService
+﻿@using DataAccessingService.MetadataProviding
 <!DOCTYPE html>
 <html
     lang="en" >
