--- a/frontend-angular-workspace/projects/administration/src/app/components/card/card.component.html
+++ b/frontend-angular-workspace/projects/administration/src/app/components/card/card.component.html
@@ -18,5 +18,11 @@
       {{title}}
     </div>
   </div>
-  <ng-content></ng-content>
+  <div
+    class="
+      p-2
+    "
+  >
+    <ng-content></ng-content>
+  </div>
 </div>
