--- a/frontend-angular-workspace/projects/end-user/src/app/components/header/header.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/header/header.component.html
@@ -40,7 +40,7 @@
     <a
       *ngFor="let item of items"
       class="
-        flex-initial
+        flex-initia&Pagel
         mr-4
         ml-4
       "
