--- a/frontend-angular-workspace/projects/end-user/src/app/components/item-grid/item-grid.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/item-grid/item-grid.component.html
@@ -7,7 +7,10 @@
   <div
     class="
       grid
-      grid-cols-4
+      2xl:grid-cols-4
+      xl:grid-cols-3
+      lg:grid-cols-2
+      md:grid-cols-1
       gap-2
     "
   >
@@ -20,8 +23,8 @@
       "
     >
       <div
+        [style.backgroundImage]="item.imageReference | urlWrap"
         style="
-          background-image: url('{{item.imageReference}}');
           width: 300px;
           height: 200px;
         "
@@ -35,6 +38,7 @@
           width: 300px;
         "
       >
+        <!--Title-->
         <div
           class="
             mt-2
@@ -43,11 +47,12 @@
         >
           {{item.title}}
         </div>
+        <!--Price for sale-->
         <div
           class="
           "
         >
-          Price:
+          Price for Sale:
           <span
             class="
               font-semibold
@@ -56,6 +61,41 @@
           >
             {{item?.priceForSale}}
           </span>
+        </div>
+        <!--Price for rent-->
+        <div
+          class="
+            flex
+          "
+        >
+          <div>
+            Price for Rent:
+          </div>
+          <div
+            class="
+              ml-1
+              inline-block
+              flex
+              flex-col
+            "
+          >
+            <div
+              class="
+                font-semibold
+                text-red-500
+              "
+            >
+              {{item?.priceForRentUrban}}
+            </div>
+            <div
+              class="
+                font-semibold
+                text-red-500
+              "
+            >
+              {{item?.priceForRentTraveling}}
+            </div>
+          </div>
         </div>
       </div>
     </div>
