--- a/frontend-angular-workspace/projects/end-user/src/app/components/body-for-rent/body-for-rent.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/body-for-rent/body-for-rent.component.html
@@ -1,29 +1,6 @@
 <app-layout-body-with-cover
   coverImageReference="https://www.itl.cat/pngfile/big/214-2141088_desktop-bike-stunt-images-wallpaper-motorcycle-vs-car.jpg"
 >
-  <div
-    class="
-        mt-6
-        mb-4
-        flex
-      "
-  >
-    <div
-      class="
-          ml-4
-          w-1/6
-        "
-    >
-      <app-filter></app-filter>
-    </div>
-    <div
-      class="
-          ml-4
-          mr-4
-          w-full
-        "
-    >
-      <app-item-grid></app-item-grid>
-    </div>
-  </div>
+  <app-item-master>
+  </app-item-master>
 </app-layout-body-with-cover>
