--- a/frontend-angular-workspace/projects/end-user/src/styles.scss
+++ b/frontend-angular-workspace/projects/end-user/src/styles.scss
@@ -8,6 +8,7 @@ $primary: #81899b;
 
 html {
   scrollbar-width: none;
+  overflow-x: hidden;
   -ms-overflow-style: none; /* For Internet Explorer and Edge */
 }
 
