--- a/frontend-angular-workspace/projects/amber-core/src/lib/components/icon/icon.component.html
+++ b/frontend-angular-workspace/projects/amber-core/src/lib/components/icon/icon.component.html
@@ -13,6 +13,6 @@
   "
   (mouseenter)="hovering = true"
   (mouseleave)="hovering = false"
-  tabindex="0"
+  [attr.tabindex]="disableTabIndex ? '' : 0"
 >
 </div>
