--- a/frontend-angular-workspace/projects/end-user/src/app/components/header/header.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/header/header.component.html
@@ -40,9 +40,13 @@
     <a
       *ngFor="let item of items"
       class="
-        flex-initia&Pagel
+        flex-initial
         mr-4
         ml-4
+        hover:ring-1
+        active:ring-2
+        p-1
+        rounded
       "
       [href]="item.reference"
     >
@@ -66,6 +70,9 @@
       mr-4
     "
   >
-    Something
+    <amber-icon
+      backgroundImageUrl="assets/cart-outline-white.svg"
+      size="2em"
+    ></amber-icon>
   </div>
 </div>
