--- a/frontend-angular-workspace/projects/end-user/src/app/components/item-grid/item-card-row.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/item-grid/item-card-row.component.html
@@ -18,5 +18,5 @@
   backgroundImageUrl="assets/calendar-outline.svg"
   hoverBackgroundImageUrl="assets/calendar-solid.svg"
   size="1.5em"
-  (click)="calendarDynamicService.toggleCalendar($event)"
+  (click)="calendarDynamicService.resetCalendarBox(); calendarDynamicService.toggleCalendar($event)"
 ></amber-icon>
