--- a/frontend-angular-workspace/projects/end-user/src/app/components/calendar/calendar-box.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/calendar/calendar-box.component.html
@@ -152,6 +152,7 @@
           active:ring-2
           select-none
         "
+        (click)="calendarDynamicService.action()"
       >
         <amber-icon
           backgroundImageUrl="assets/checkmark.svg"
