--- a/frontend-angular-workspace/projects/end-user/src/app/components/header/header.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/header/header.component.html
@@ -70,9 +70,14 @@
       mr-4
     "
   >
-    <amber-icon
-      backgroundImageUrl="assets/cart-outline-white.svg"
-      size="2em"
-    ></amber-icon>
+    <a
+      [href]="'cart'"
+    >
+      <amber-icon
+        backgroundImageUrl="assets/cart-outline-white.svg"
+        size="2em"
+      ></amber-icon>
+    </a>
+
   </div>
 </div>
