--- a/frontend-angular-workspace/projects/end-user/src/app/components/body-cart/body-cart.component.html
+++ b/frontend-angular-workspace/projects/end-user/src/app/components/body-cart/body-cart.component.html
@@ -3,40 +3,40 @@
 >
   <div
     class="
-      p-1
       flex
+      p-2
     "
   >
     <div
       class="
-        w-72
+        w-40
       "
     ></div>
     <div
       class="
-        flex
         flex-auto
+        flex
         flex-col
-        p-1
-        gap-1
+        gap-2
       "
     >
-      <app-accordion
+      <app-table-master
         title="Daily Rental Inside City"
-      ></app-accordion>
-      <app-accordion
+      ></app-table-master>
+      <app-table-master
         title="Daily Rental Traveling"
-      ></app-accordion>
-      <app-accordion
+      ></app-table-master>
+      <app-table-master
         title="Monthly Rental"
-      ></app-accordion>
-      <app-accordion
+      ></app-table-master>
+      <app-table-master-for-sale
         title="For Sale"
-      ></app-accordion>
+        [rows]="rowsForSale"
+      ></app-table-master-for-sale>
     </div>
     <div
       class="
-        w-72
+        w-40
       "
     ></div>
   </div>
