--- a/frontend-angular-workspace/projects/end-user/src/styles.scss
+++ b/frontend-angular-workspace/projects/end-user/src/styles.scss
@@ -16,3 +16,13 @@ html::-webkit-scrollbar {
   width: 0;
   background: transparent;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
